# University

Computer-Graphics/: README.md
Computer-Graphics/3D render/Plot2DViewer/: AffineTransform.h  Camera2D.h  Camera3D.h  Data.h  EdgesMap.txt  Matrix.h  Model2d.h  Model3D.h  Plot2DViewer.cpp  Plot2DViewer.vcxproj  Plot2DViewer.vcxproj.filters  Scene2D.h  Scene3D.h  Vector3D.h  VerticesMap.txt
Computer-Graphics/RayTrace/: RayTrace.cpp  RayTrace.h  RayTrace.pro  main.cpp  other.h  sceneWidget.cpp  sceneWidget.h
DataMining/: first.ipynb  first_tmp.ipynb  four.ipynb  two.ipynb
GestureHandRecognitin/: CMakeLists.txt  README.md  cmake_generate.bat  cmake_generate_vs.bat  deployqt.bat  make.bat  vcvarsall.bat
GestureHandRecognitin/src/: main.cpp
GestureHandRecognitin/src/Camera/: ImageView.cpp  ImageView.h  basedVideoSurface.cpp  basedVideoSurface.h  camera.cpp  camera.h  videoSurfaceCaptured.h
GestureHandRecognitin/src/GestureRecognition/: gestureRecognition.cpp  gestureRecognition.h
GestureHandRecognitin/src/GestureRecognition/ImageProcessing/: imageProcessing.h  ipContext.cpp  ipContext.h  ipDevice.cpp  ipDevice.h  ipImage.cpp  ipImage.h  ipOpenCL.h
GestureHandRecognitin/src/GestureRecognition/ImageProcessing/OpenCL/: opencl_context.cpp  opencl_context.h  opencl_device.cpp  opencl_device.h  opencl_image.cpp  opencl_image.h
GestureHandRecognitin/src/GestureRecognition/ImageProcessing/OpenCL/cl/: gesture.cl
Neural Network/First lab/: Weights.txt  run.py  task conditions.txt  training.py
Neural Network/Second lab/: lab2.py
Neural Network/Third lab/: lab3.py
